Looking to merge section

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -18,29 +18,19 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
             2](#descriptive-commentary-on-vignette-2)
-    -   [Observations and analysis of use of Game Design Patterns (GDPs)
-        by
-        participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
     -   [Cultural Dimension](#cultural-dimension)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-            -   [The use of GDPs (especially during playtesting) can aid
-                the process of imagining the end user
-                experiences](#the-use-of-gdps-especially-during-playtesting-can-aid-the-process-of-imagining-the-end-user-experiences)
-            -   [Other examples and interpretation on designing for
-                others / shifts of
-                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
         -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of
-            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+            peers to influence modification of games (developing
+            community
+            norms)](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms)
         -   [The propagation of use of GDPs - (through playtesting() IS
             IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
             NATURE OF GDPS TO AID
             PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
-        -   [GDPs facilitate the use of wider funds of
-            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-            -   [Family funds of knowledge in asset creation and game
-                design](#family-funds-of-knowledge-in-asset-creation-and-game-design)
+        -   [GDPs facilitate the use of wider funds of knowledge /
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Perhaps add here a summary of cultural section if
             useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
     -   [GDPs used in the process of guided
@@ -311,10 +301,12 @@ The key and door pattern is one of the harder ones to implement as it involves a
 
 The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants which may have influence Olivia's interest.
 
-There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
+There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". The response of the child -  "It is for me!" - appears to show both her awareness of the conventions of game design and a desire to work against those conventions. Later the child articulate her motivation to _surprise_ players with this level design.
 
 
-
+<!--
+The supporting resources are available here.
+https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 
 SHIFT
 For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
@@ -335,9 +327,7 @@ In the full vignette transcription included in the appendices as Vignette 2, the
 
 <!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
 
-<!--
-The supporting resources are available here.
-https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
+
 <!-- **Cultural:**  -->
 
 
@@ -370,28 +360,18 @@ The parent navigates this process skilfully and is able to incorporate the child
 
 The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to ask / imagine stage. The completion of a coding task
   indicating that she is aware of the greater possibility for effective child input at this stage.
-
-In ask/imagine stages parent and child are able  discuss storytelling, graphical and other aesthetic choices -->
+-->
 
 
 <!-- ## Observations and analysis of use of Game Design Patterns (GDPs) by participants -->
 
-<!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
-
-
-<!-- Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles. -->
-
-<!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
-SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
-
-<!-- NOTE - ADD QUICK SUMMARY OF PREVIOUS CHAPTERS FINDINGS - IF THIS HELPS GROUND THIS SECTION -->
-<!-- - Tools: Specifics on Code Playgrounds and Phaser and a Javascript framework -->
-<!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
 
 ## Cultural Dimension
 
+
+The role of playtesting a medium for an idioculture to emerge became a significant part of the pedagogy. The following section explore how this happened in relation to the use of GDPs in varied ways.  x,y,z
 
 ### The role of GDPs to facilitate learners to design for others
 
@@ -401,19 +381,22 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
 **The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences**
 
-
-
 This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game.
 
 This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test users.
 FIND SUPPORT, ideally an example
 
-
-
 Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
 
 In the starting vignette of the chapter Olivia and Suzanna come into conflict over the imagined experience of future players. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. Suzanna shares _"Must be quite hard to get through that door._" when Suzanna places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play (as explored in the previous chapter). This interaction shows the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
 
+Later Olivia interacts with one of the student helpers and outlines her motivations in design.
+    H1- Has it been a lot of fun
+    Olivia: Yes and I like making it frustrating. that other people find it frustrating!
+
+Olivia  comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
+
+REFERENCE THE FOLLOWING IN AN APPENDIX
 <!-- Later Olivia interacts with one of the student helpers and outlines her motivations in design.
 
     H1: Have you enjoyed making the game?
@@ -438,27 +421,22 @@ In the starting vignette of the chapter Olivia and Suzanna come into conflict ov
     Olivia: Good! (laughs)
     Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
 
-Th comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
 
-<!-- #### Other examples and interpretation on designing for others / shifts of perspective
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations of additions.
-PRIORITY HIGH
-Find other examples... -->
-<!-- Shifts can be described as shifting between levels of activity if viewing activity through an AT lens that encompasses nested levels of activity systems. -->
 
-<!-- There are different levels of designing for others
-One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
+
 
 THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
-A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Th's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
+A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Olivia's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 
 POSSIBLE END TO THIS SECTION?
 **GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.**
 HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
 
 
+
+
 <!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
-Designing for others - as a key per.spective in constructionism.
+Designing for others - as a key perspective in constructionism.
 Note: What added insights or tips for practitioners can I bring here?
 NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
 
@@ -473,18 +451,17 @@ AND SO? -->
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
 
+There are different levels of designing for others
+One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward.
 
 
-### GDP concepts and language used in informal feedback for peers to influence modification of games (developping community norms)
-
-
+### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - MERGE WITH BELOW? 
 
 **The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
 In Chapter 5 norming behaviour was identified as an emerging characteristic of playtesting in this setting. This section shares evidence of how GDPs help this process.
 
 The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction during playtesting.
-
 
 
 The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
@@ -511,7 +488,7 @@ She had been made aware by her daughter Ne about the relevant game variables. In
 
 Other children come and play the game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating." In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
 
-This form of interaction can be analysed using the professional framework called MDA. The Mechanic dimension here is the jump game mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later.
+<!-- This form of interaction can be analysed using the professional framework called MDA. The Mechanic dimension here is the jump game mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later. -->
 
 
 <!-- We can see that Molly justifies the game feel of a very high fast jump with a narrative response about the character being spaceman. However, the limited amount of time anyone plays her game and her own frustration in playing it is telling. The game feel is frustrating in the wrong way here. Molly seems to initially misconstrue the feedback she is getting here equating her ability to make the game hard as a positive thing. However, towards the end she notes the frustrating nature of the game. -->
@@ -553,11 +530,15 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 <!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
 
 
-### The propagation of use of GDPs -  (through playtesting() IS IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND NATURE OF GDPS TO AID PROPAGATION
+### Evolution and propagation of GDPs concepts during playtesting - MERGE WITH ABOVE?
+
+<!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
+<!-- NOTE THIS includes NON TEMPLATED GDPs? -->
 
 **The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
-NOTE CAN THIS FOCUS ON NON TEMPLATED GDPs?
+In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also  and used to request help.  
+
 
 For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
 
@@ -579,15 +560,14 @@ For example, the work of the child to add 21 levels to their own game served as 
 When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
 
 Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+ANY EVIDENCE?
 
 The propagation in the example above is completed entirely through peer activity rather than instruction or supporting resources. A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence.
 
 ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
 eg.
 
-Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on faciliator and resource help and 2 only mostly self-driven in both identification and implementation.
-
-
+Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on facilitator and resource help and 2 only mostly self-driven in both identification and implementation.
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
@@ -608,10 +588,6 @@ While the use of some concepts can be seen as intentional affordance of the intr
     So that the background is clearer.
 
 While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
-
-
-
-
 
 
 
