--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -6,29 +6,19 @@
     -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
             2](#descriptive-commentary-on-vignette-2)
-    -   [Observations and analysis of use of Game Design Patterns (GDPs)
-        by
-        participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
     -   [Cultural Dimension](#cultural-dimension)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-            -   [The use of GDPs (especially during playtesting) can aid
-                the process of imagining the end user
-                experiences](#the-use-of-gdps-especially-during-playtesting-can-aid-the-process-of-imagining-the-end-user-experiences)
-            -   [Other examples and interpretation on designing for
-                others / shifts of
-                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
         -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of
-            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+            peers to influence modification of games (developing
+            community
+            norms)](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms)
         -   [The propagation of use of GDPs - (through playtesting() IS
             IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
             NATURE OF GDPS TO AID
             PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
-        -   [GDPs facilitate the use of wider funds of
-            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-            -   [Family funds of knowledge in asset creation and game
-                design](#family-funds-of-knowledge-in-asset-creation-and-game-design)
+        -   [GDPs facilitate the use of wider funds of knowledge /
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Perhaps add here a summary of cultural section if
             useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
     -   [GDPs used in the process of guided
