work on navigation

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -455,7 +455,7 @@ There are different levels of designing for others
 One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward.
 
 
-### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - MERGE WITH BELOW? 
+### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - MERGE WITH BELOW?
 
 **The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
@@ -682,24 +682,27 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 The tension between of participant choice and use and providing appropriate scaffolding materials to support implementation of code was explored in the previous chapter. The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution.
 
-The vignette in this chapter shows the parent following the child's desire to implement a GDP using a step by step tutorial. The vignette of the chapter four showed Toby copying a code example which he chose from a graphical menu of patterns. The previous chapter also outlined the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. These varied forms of scaffolding represent different approaches to supporting the process of making alterations to the code inline with a use-modify-create (UMC) approach.
+Thus GDPs were chosen by myself as a suggested project navigation framework. Given the integration of this decision into the learning design from P2 onwards,  some of the observations which observer participants using this framework may appear as a tautology. In that it is no surprise that participant use the provided framework. However the evolving use of GDPS, the variations within that use and continued adaptation of GDP use merit attention.
 
-NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE?
+My data does not capture this stage of the use of starting activities which selected key changes to code the P2 when participants used this resource. However I've used the cards and template game on many other groups and public events to replicate the very early stages of interaction. From journal notes on these repeated  observations,
+Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
+other COMMENTs HERE
 
+The vignette in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
 
-NOTE -
-While GDPs emerged as a natural response fr the participants when requesting onding help, it is important to note that from P2 onwards, because the learning resources I created were themed on GDPs, it follows that many request for help would be oriented around this framework.
-Thus the following observations bear this caveat but still show potential.
+By way of contrast, Vignette.toby showed the child shares an independent style with Suzanna but engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+
 
 DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
 
+<!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
+
+These varied forms of documentation, and their varied adoption and propagation
+represent different  approaches to  scaffolding  the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
 
 
+<!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
 
-
-dOES THIS FIT HERE? In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.  Later sections explore varied strategies used to implement GDPs including, informal propagation of GDPs as a result of playtesting, the development of specialists division of labour and
-
-However, despite this variety, this chapter will explore how the evolving collection of GDPs acted as a base for the variety of approaches that emerged from it. To do this, the following sections explore different uses of game design patterns.
 
 
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
