--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -671,7 +671,7 @@ This section examines the use of GDPs to facilitate guided participation via int
 . -->
 
 
-### GDPs offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials
+### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials 
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 
@@ -688,7 +688,7 @@ My data does not capture this stage of the use of starting activities which sele
 Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
 other COMMENTs HERE
 
-The vignette in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
+The vignette in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored later) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
 
 By way of contrast, Vignette.toby showed the child shares an independent style with Suzanna but engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
 
